Refactoring non linear eq (#7)
* Reordered project structure, added simple unit tests for non - linear equation methods

* Renamed a test file for convinience

* Changed function parameters to meaningfull names

* Removed unneeded lines from .gitignore

* Deleted misc results from one of assignments

* Update README.md

* Update README.md

* Update README.md

* Added VsCode directory to .gitignore

* Added a VsCode and IDEA directories to ignore list

* Fixed import after renaming a module

* Finished implementing simple unit tests for methods

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,8 @@
-
-.idea/
-.vscode/
+/.vscode/
+/.idea/
 
 *.png
-
-linear-equations-systems/data\.txt
-
-interpolation/__pycache__/
-integration/__pycache__/
-approximations/__pycache__/
-
-
 *.txt
-
 *.pyc
+*.csv
 
-eigenvalues-problem/eigentvalues/__init__.
-/venv/
