Refactoring linear equations system (#11)
* Renaming inner directory

* Renaming the inner directory

* Changed .gitignore file

* Further renaming and removing of reshaping of result vector

* Added a TODO to document tweaked cholesky factorization

* Refactoring continues

* Tests are up and running again

* Removal of redundant None check

* Changed gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,9 @@ dmypy.json
 .vscode/*
 *.code-workspace
 
+
+### IDEA ###
+.idea/*
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
